--- a/src/main/resources/me/dan/tournamentprogram/scenes/individual_view_scene.fxml
+++ b/src/main/resources/me/dan/tournamentprogram/scenes/individual_view_scene.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="702.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tech.candy_dev.tournamentprogram.scenes.IndividualViewScene">
+<AnchorPane prefHeight="400.0" prefWidth="702.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="me.dan.tournamentprogram.scene.controller.IndividualViewScene">
    <children>
       <Label layoutX="244.0" layoutY="44.0" prefHeight="58.0" prefWidth="214.0" text="Individual View" textAlignment="CENTER">
          <font>
