--- a/src/main/resources/me/dan/tournamentprogram/scenes/team_view_scene.fxml
+++ b/src/main/resources/me/dan/tournamentprogram/scenes/team_view_scene.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="702.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tech.candy_dev.tournamentprogram.scenes.TeamView">
+<AnchorPane prefHeight="400.0" prefWidth="702.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="me.dan.tournamentprogram.scene.controller.TeamView">
    <children>
       <Label layoutX="232.0" layoutY="42.0" text="Team Information">
          <font>
