--- a/src/main/resources/me/dan/tournamentprogram/scenes/creation_scene.fxml
+++ b/src/main/resources/me/dan/tournamentprogram/scenes/creation_scene.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -20,7 +21,7 @@
             <Font size="23.0" />
          </font>
       </Label>
-      <TextField fx:id="nameField" layoutX="308.0" layoutY="217.0" promptText="Name" />
+      <TextField fx:id="teamMateField" layoutX="62.0" layoutY="201.0" prefHeight="25.0" prefWidth="129.0" promptText="TeamMate" visible="false" />
       <Label layoutX="312.0" layoutY="183.0" prefHeight="34.0" prefWidth="141.0" text="Name" textAlignment="CENTER">
          <font>
             <Font size="23.0" />
@@ -28,5 +29,8 @@
       </Label>
       <Button layoutX="332.0" layoutY="286.0" mnemonicParsing="false" onMouseClicked="#onCreateButtonClicked" prefHeight="34.0" prefWidth="101.0" text="Create" />
       <Button layoutX="332.0" layoutY="332.0" mnemonicParsing="false" onMouseClicked="#onMainMenuButtonClicked" prefHeight="34.0" prefWidth="101.0" text="Main Menu" />
+      <Button fx:id="addButton" layoutX="212.0" layoutY="201.0" mnemonicParsing="false" onMouseClicked="#onAddButtonClick" text="Add" visible="false" />
+      <ListView fx:id="memberList" layoutX="62.0" layoutY="230.0" prefHeight="94.0" prefWidth="188.0" visible="false" />
+      <TextField fx:id="nameField" layoutX="307.0" layoutY="218.0" prefHeight="25.0" prefWidth="129.0" promptText="Name" />
    </children>
 </AnchorPane>
