--- a/src/main/resources/me/dan/tournamentprogram/scenes/scoreboard_scene.fxml
+++ b/src/main/resources/me/dan/tournamentprogram/scenes/scoreboard_scene.fxml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="401.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="me.dan.tournamentprogram.scene.controller.ScoreboardScene">
+<AnchorPane prefHeight="401.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="me.dan.tournamentprogram.scene.controller.ScoreboardController">
    <children>
       <Label layoutX="272.0" layoutY="38.0" text="Scoreboard" textAlignment="CENTER">
          <font>
             <Font name="System Bold" size="29.0" />
          </font>
       </Label>
-      <ComboBox layoutX="71.0" layoutY="136.0" prefWidth="150.0" />
+      <ComboBox fx:id="typeSelectComboBox" layoutX="71.0" layoutY="136.0" prefWidth="150.0" />
       <Label layoutX="71.0" layoutY="109.0" prefHeight="27.0" prefWidth="54.0" text="Type">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <ListView layoutX="250.0" layoutY="123.0" prefHeight="200.0" prefWidth="200.0" />
+      <ListView fx:id="scoreboard" layoutX="250.0" layoutY="123.0" prefHeight="200.0" prefWidth="200.0" />
+      <Button layoutX="300.0" layoutY="337.0" mnemonicParsing="false" onMouseClicked="#onMainMenuButtonClicked" prefHeight="34.0" prefWidth="101.0" text="Main Menu" />
    </children>
 </AnchorPane>
