--- a/src/main/resources/me/dan/tournamentprogram/scenes/team_view_scene.fxml
+++ b/src/main/resources/me/dan/tournamentprogram/scenes/team_view_scene.fxml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="702.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="me.dan.tournamentprogram.scene.controller.TeamView">
+<AnchorPane prefHeight="400.0" prefWidth="702.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="me.dan.tournamentprogram.scene.controller.TeamViewController">
    <children>
       <Label layoutX="232.0" layoutY="42.0" text="Team Information">
          <font>
             <Font name="System Bold" size="28.0" />
          </font>
       </Label>
-      <ComboBox layoutX="46.0" layoutY="134.0" prefWidth="150.0" promptText="Team" />
+      <ComboBox fx:id="teamComboBox" layoutX="46.0" layoutY="134.0" prefWidth="150.0" promptText="Team" />
       <Label layoutX="46.0" layoutY="107.0" prefHeight="18.0" prefWidth="51.0" text="Team">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <ListView layoutX="252.0" layoutY="134.0" prefHeight="200.0" prefWidth="200.0" />
+      <ListView fx:id="teamMateList" layoutX="252.0" layoutY="134.0" prefHeight="200.0" prefWidth="200.0" />
       <Label layoutX="303.0" layoutY="108.0" prefHeight="25.0" prefWidth="96.0" text="Team Mates">
          <font>
             <Font size="16.0" />
@@ -31,5 +31,11 @@
             <Font size="18.0" />
          </font>
       </Label>
+      <Label fx:id="pointsLabel" layoutX="534.0" layoutY="135.0" prefHeight="27.0" prefWidth="86.0">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Button layoutX="301.0" layoutY="352.0" mnemonicParsing="false" onMouseClicked="#onMainMenuButtonClicked" prefHeight="34.0" prefWidth="101.0" text="Main Menu" />
    </children>
 </AnchorPane>
